Force destroys particles rotation #53073

Closed
opened 2017-10-15 11:06:18 +02:00 by Serge Lyatin · 9 comments

System Information
Win7 64bit

Blender Version
Broken: 2.79c

Short description of error
Particles rotate faces through Explode modifier. Just the presence of force on the same layer destroys particles Random rotation, even if its strength was set to zero.

Force_and_rotation.png

Exact steps for others to reproduce the error
Open file and start Particles simulation with Force on the same layer as emitter and on separate layers to see the difference.
Force_and_rotation.blend

**System Information** Win7 64bit **Blender Version** Broken: 2.79c **Short description of error** Particles rotate faces through Explode modifier. Just the presence of force on the same layer destroys particles Random rotation, even if its strength was set to zero. ![Force_and_rotation.png](https://archive.blender.org/developer/F1037427/Force_and_rotation.png) **Exact steps for others to reproduce the error** Open file and start Particles simulation with Force on the same layer as emitter and on separate layers to see the difference. [Force_and_rotation.blend](https://archive.blender.org/developer/F1037462/Force_and_rotation.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @zeauro

Added subscriber: @zeauro

I can confirm that there is same problem on linux, too.

If maximum distance of force field is set to 1, we can see particles with random rotation having their rotation stopped by entering in the force field although effect point are still disabled.
It looks like Force Fields Rotation effect is totally overwritting and killing Angular Velocity Rotation effect when a particle begins to be influenced by force field. And it goes on for the rest of its life although it quits force field.

To disable force field effect on particles, a workaround can be to precise an effector group on particle system properties.
But if a force field effect is wanted on particles location, rotation will be affected.

Without searching to provide a complete solution to blend Angular Velocity effect and Force field effect.
At least, there should be a try to keep Angular Velocity effect when Force Field rotation effect point is disabled.

I can confirm that there is same problem on linux, too. If maximum distance of force field is set to 1, we can see particles with random rotation having their rotation stopped by entering in the force field although effect point are still disabled. It looks like Force Fields Rotation effect is totally overwritting and killing Angular Velocity Rotation effect when a particle begins to be influenced by force field. And it goes on for the rest of its life although it quits force field. To disable force field effect on particles, a workaround can be to precise an effector group on particle system properties. But if a force field effect is wanted on particles location, rotation will be affected. Without searching to provide a complete solution to blend Angular Velocity effect and Force field effect. At least, there should be a try to keep Angular Velocity effect when Force Field rotation effect point is disabled.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm.
The problem is still seen in 2.82.
Removing the force field in the attached file, the particles begin to rotate.

I can confirm. The problem is still seen in 2.82. Removing the force field in the attached file, the particles begin to rotate.

Problem probably introduced in 666667bd

Problem probably introduced in 666667bd

This issue was referenced by b34ea1d4ce

This issue was referenced by b34ea1d4ce3a5602908d3a1c74ef1fea5ba17379
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-09-14 17:21:03 +02:00
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#53073
No description provided.