Fix T53073: force destroys particles rotation

See the differential for some more information.

Reviewers: mano-wii

Differential Revision: https://developer.blender.org/D8891